name: CIS194-Kobeyu
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: kobeyu@gmail.com
category: Homework
author: Greg Manning
data-dir: ""
 
library
    build-depends: base >=4.7 && <4.8, memoize
    exposed: True
    buildable: True
    default-language: Haskell2010
    other-modules: HW01
 
 